# metal-python

./: .gitignore  .releaserc.json  CHANGELOG.md  Makefile  README.md  RELEASE.md  deltfile  lll  metal_openapi.fixed.yaml  metal_openapi.fixed.yaml_bug1
equinix_metal/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
equinix_metal/.openapi-generator/: FILES
equinix_metal/docs/: AWSFabricProvider.md  AWSFabricProviderType.md  ActivateHardwareReservationRequest.md  Address.md  Attribute.md  AttributeData.md  AuthToken.md  AuthTokenInput.md  AuthTokenList.md  AuthTokenProject.md  AuthTokenUser.md  AuthenticationApi.md  BGPApi.md  BGPSessionInput.md  BGPSessionInputAddressFamily.md  Batch.md  BatchesApi.md  BatchesList.md  BgpConfig.md  BgpConfigDeploymentType.md  BgpConfigRequestInput.md  BgpConfigRequestInputDeploymentType.md  BgpConfigStatus.md  BgpDynamicNeighbor.md  BgpDynamicNeighborCreateInput.md  BgpDynamicNeighborList.md  BgpDynamicNeighborState.md  BgpNeighborData.md  BgpRoute.md  BgpSession.md  BgpSessionAddressFamily.md  BgpSessionList.md  BgpSessionNeighbors.md  BondPortData.md  CapacityApi.md  CapacityCheckPerFacilityInfo.md  CapacityCheckPerFacilityList.md  CapacityCheckPerMetroInfo.md  CapacityCheckPerMetroList.md  CapacityInput.md  (+337 more)
equinix_metal/equinix_metal/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
equinix_metal/equinix_metal_t0mk/: __init__.py  api_client.py  configuration.py  exceptions.py
equinix_metal/test/: test_activate_hardware_reservation_request.py  test_address.py  test_attribute.py  test_attribute_data.py  test_auth_token.py  test_auth_token_input.py  test_auth_token_list.py  test_auth_token_project.py  test_auth_token_user.py  test_authentication_api.py  test_aws_fabric_provider.py  test_aws_fabric_provider_type.py  test_batch.py  test_batches_api.py  test_batches_list.py  test_bgp_api.py  test_bgp_config.py  test_bgp_config_deployment_type.py  test_bgp_config_request_input.py  test_bgp_config_request_input_deployment_type.py  test_bgp_config_status.py  test_bgp_dynamic_neighbor.py  test_bgp_dynamic_neighbor_create_input.py  test_bgp_dynamic_neighbor_list.py  test_bgp_route.py  (+352 more)
(+1171 files in other folders)
