[tool.poetry]
name = "equinix_metal"
version = "0.2.1"
description = "Metal API"
authors = ["support@equinixmetal.com"]
license = "Equinix Metal"
readme = "README.md"
repository = "https://github.com/metal-python/equinix-labs"
keywords = ["OpenAPI", "OpenAPI-Generator", "Metal API"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">= 1.10.5"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=4.4.6"
flake8 = ">=6.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
